MemoryCoordinator checks if ServiceWorker exists on the suspending process

If the suspending process has a worker thread, currently the worker won't
respond with events any more. This patch is to keep the process running which
has workers.

BUG=671084

Review-Url: https://codereview.chromium.org/2569963002
Cr-Commit-Position: refs/heads/master@{#439399}

Former-commit-id: 14169abdc6f1d31468cb1de6212ff256c89b92b2